--- a/src/index.css
+++ b/src/index.css
@@ -2,29 +2,31 @@
 @tailwind components;
 @tailwind utilities;
 
-
+@layer components {
   @font-face {
     font-family: 'Walter';
     font-style: normal;
     font-weight: 400;
     font-display: swap;
-    src: url('/Walter.ttf') format('truetype');
+    src: url('/font/Walter.ttf') format('truetype');
   }
 
   @font-face {
     font-family: 'Winter';
-    src: url('/winter.otf') format('opentype');
+    src: url('/font/winter.otf') format('truetype');
+    font-weight: 400;
+    font-style: normal;
   }
 
   @font-face {
     font-family: 'Lato';
-    src: url('Lato-Regular.ttf') format('truetype');
+    src: url('/font/Lato-Regular.ttf') format('truetype');
     font-weight: 400;
     font-style: normal;
   }
   @font-face {
     font-family: 'Lato';
-    src: url('Lato-Bold.ttf') format('truetype');
+    src: url('/font/Lato-Bold.ttf') format('truetype');
     font-weight: 700;
     font-style: normal;
   }
@@ -37,4 +39,5 @@
 
 textarea {
   resize: none;
+}
 }
